[package]
name = "new_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.29.0", default-features = false, features = ["all-keys", "key-value-db", "rpc"] }
tokio = { version = "1", features = ["full"] }
miniscript = {version = "10.0.0", features = ["std"]}